# space-time-proof

./: Cargo.toml  PROVENANCE.md  README.md
.github/workflows/: audit.yml  ci.yml  docker.yml
benches/: pow.rs  proving.rs  verifying.rs
certifier/: Cargo.toml
k2pow-service/: Cargo.toml
profiler/: Cargo.toml
service/: Cargo.toml
src/: initialize.rs  prove.rs
src/pow/: mod.rs  null.rs  randomx.rs
tests/: generate_and_verify.rs  generate_and_verify_null.rs  initialize_and_verify.rs
