[package]
name = "space-time-proof"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proof of Space-Time proving and verification primitive"
repository = "https://github.com/TickTockBent/space-time-proof"
readme = "README.md"

[dependencies]
aes = "0.8.4"
# Take a dependency on cipher to enable block-padding feature
# as `aes` doesn't expose it.
cipher = { version = "*", features = ["block-padding"] }
eyre = "0.6.12"
regex = "1.11.1"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytemuck = "1.23.0"
serde_with = { version = "3.12.0", features = ["base64", "hex"] }

scrypt-jane = { git = "https://github.com/spacemeshos/scrypt-jane-rs", branch = "main" }
blake3 = "1.8.2"
bitvec = "1.0.1"
rayon = "1.10.0"
rand = "0.8.5"
log = "0.4.27"
randomx-rs = { git = "https://github.com/spacemeshos/randomx-rs", rev = "d46bcd90e09428883e253b8203d6b311b0a07b91" }


primitive-types = "0.13.1"
thiserror = "2.0.12"
thread_local = "1.1.7"
mockall = "0.13.1"
core_affinity = "0.8.3"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20.0"
rand = "0.8.5"
proptest = "1.6.0"
rstest = "0.25.0"

[target.'cfg(not(windows))'.dev-dependencies]
pprof = { version = "0.14.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "proving"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "verifying"
harness = false

