[workspace]

[package]
name = "space-time-proof"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proof of Space-Time proving and verification primitive"
repository = "https://github.com/TickTockBent/space-time-proof"
readme = "README.md"

[features]
default = []
# Enable RandomX-backed proof-of-work for adversarial use cases.
# Requires cmake at build time and pulls in the randomx-rs C dependency.
# Without this feature, the library uses NullPowProver / NullPowVerifier
# which are safe only for non-adversarial scenarios (see src/pow/null.rs).
randomx = ["dep:randomx-rs"]

[dependencies]
aes = "0.8.4"
# Take a dependency on cipher to enable block-padding feature
# as `aes` doesn't expose it.
cipher = { version = "0.4", features = ["block-padding"] }
eyre = "0.6.12"
regex = "1.11.1"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytemuck = "1.23.0"
serde_with = { version = "3.12.0", features = ["base64", "hex"] }

scrypt-jane = { git = "https://github.com/TickTockBent/scrypt-jane-rs", rev = "9e118d7" }
blake3 = "1.8.2"
bitvec = "1.0.1"
rayon = "1.10.0"
rand = "0.8.5"
log = "0.4.27"
randomx-rs = { git = "https://github.com/TickTockBent/randomx-rs", rev = "5e4adca", optional = true }

primitive-types = "0.13.1"
thiserror = "2.0.12"
thread_local = "1.1.7"
core_affinity = "0.8.3"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20.0"
rand = "0.8.5"
proptest = "1.6.0"
rstest = "0.25.0"
mockall = "0.13.1"

[target.'cfg(not(windows))'.dev-dependencies]
pprof = { version = "0.14.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "proving"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "verifying"
harness = false

